Fix bug listing local card img stretch

--- a/src/containers/ContactPage/ListingContactCard.css
+++ b/src/containers/ContactPage/ListingContactCard.css
@@ -1,14 +1,13 @@
 .root {
-    display: flex;
-    margin-bottom: 15px;
-    padding: 0 24px;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  margin-bottom: 15px;
+  padding: 0 24px;
+  align-items: center;
+  width: 100%;
 }
 
 .iconImage {
-    width: 72px;
-    height: 72px;
-    border-radius: 50%;
-    margin-right: 25px;
+  height: 72px;
+  border-radius: 50%;
+  margin-right: 25px;
 }
